[gd_scene load_steps=13 format=2]

[ext_resource path="res://materials/Prototype/grey.tres" type="Material" id=1]
[ext_resource path="res://textures/GlowPrototype/red.tres" type="Material" id=2]
[ext_resource path="res://nodes/traps/SpinnerNode.gd" type="Script" id=3]
[ext_resource path="res://scripts/trap/BasicTrap.gd" type="Script" id=4]
[ext_resource path="res://textures/GlowPrototype/green.tres" type="Material" id=5]
[ext_resource path="res://nodes/Particles/BreakParticles.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderMesh" id=1]
material = ExtResource( 1 )
top_radius = 0.3
bottom_radius = 0.5
height = 0.5
radial_segments = 16
rings = 0

[sub_resource type="CylinderMesh" id=2]
material = ExtResource( 2 )
top_radius = 0.05
bottom_radius = 0.05
height = 2.5
radial_segments = 8
rings = 0

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0.0455628, 1.25382, 0.0379145, -0.0538226, -1.25382, -0.0232296, -0.0538226, -1.25382, 0.0226285, -0.0538226, 1.25382, -0.0232296, 0.0455628, -1.25382, -0.0385156, 0.0226285, 1.25382, -0.0538226, 0.0226285, -1.25382, 0.053211, -0.0385261, 1.25382, 0.0455628, -0.0385261, -1.25382, -0.0461744, 0.0455628, 1.25382, -0.0385156, 0.0455628, -1.25382, 0.0379145, -0.0385261, 1.25382, -0.0461744, -0.0385261, -1.25382, 0.0455628, 0.0226285, -1.25382, -0.0538226, 0.0226285, 1.25382, 0.053211, -0.0538226, 1.25382, 0.0226285, 0.0457584, 0.0986678, -0.0200463 )

[sub_resource type="CylinderShape" id=7]
height = 0.133034
radius = 0.182933

[sub_resource type="SphereMesh" id=6]
material = ExtResource( 5 )
radius = 0.25
height = 0.5
radial_segments = 16
rings = 8

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0.0905669, -0.23011, 0.483402, -0.0920596, -0.24913, -0.490856, -0.153252, -0.248938, -0.47512, -0.0894894, 0.25, -0.283228, 0.490874, -0.249139, -0.0919667, -0.47512, -0.248938, 0.153252, 0.0894894, 0.25, 0.283228, 0.252142, 0.24875, -0.163107, -0.252142, 0.24875, 0.163107, -0.457608, -0.247755, -0.198316, 0.425886, -0.247028, 0.258543, 0.258596, -0.24708, -0.425878, -0.198316, -0.247755, 0.457608, 0.283228, 0.25, 0.089396, -0.299544, 0.236203, -0.05989, 0.0598763, 0.23615, -0.299569, -0.0598763, 0.23615, 0.299569, -0.325708, -0.151443, -0.325708, 0.303687, -0.246612, 0.394831, -0.337165, -0.248959, 0.367895, 0.394811, -0.246661, -0.303745, -0.252142, 0.24875, -0.163107, 0.23768, 0.2342, 0.193103, 0.490874, -0.249138, 0.0919667, 0.0919667, -0.249138, -0.490874, -0.490874, -0.249138, -0.0919667, -0.16318, 0.248721, 0.252111, 0.314072, 0.205927, -0.0448006, -0.0920595, -0.249129, 0.490856, 0.16318, 0.248721, -0.252111, -0.314072, 0.205927, 0.0448006, -0.303635, -0.246648, -0.394887, -0.16318, 0.248721, -0.252111, -0.425889, -0.24703, 0.258545, 0.457605, -0.247754, -0.198315, 0.198315, -0.247754, 0.457605, 0.16318, 0.248721, 0.252111, -0.465237, -0.168579, 0.0449441, -0.394813, -0.246662, -0.303746, 0.198316, -0.247755, -0.457608, 0.325708, -0.151443, -0.325708, -0.26817, 0.249812, 0.134038, -0.0448822, 0.205872, -0.314082, 0.0447901, 0.20588, 0.314093, 0.0449441, -0.168578, -0.465237, 0.457608, -0.247755, 0.198316, 0.298651, 0.220483, -0.0895392, -0.0450376, -0.168576, 0.465232, 0.465237, -0.168578, 0.0449441, 0.370762, -0.211019, 0.311384, 0.299569, 0.23615, 0.0598763, 0.268197, 0.249837, 0.133959, -0.22319, -0.182049, -0.416814, -0.258543, -0.247028, 0.425886, -0.237632, 0.234244, 0.19314, 0.134067, 0.249864, -0.268134, 0.153287, -0.248995, 0.475132, -0.382117, -0.248269, 0.321017, -0.490874, -0.249139, 0.0919667, -0.26817, 0.249812, -0.134038, -0.134038, 0.249812, 0.26817, -0.237551, 0.159896, -0.237644, -0.465237, -0.168578, -0.0449441, 0.23768, 0.234201, -0.193103 )

[node name="Spinning Trap" type="Spatial"]
script = ExtResource( 4 )

[node name="SpinnerNode" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
script = ExtResource( 3 )
rotateSpeed = 3

[node name="Spin Trap" type="MeshInstance" parent="SpinnerNode"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="Death Lazer" type="MeshInstance" parent="SpinnerNode"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.136208, -1.25 )
mesh = SubResource( 2 )
skeleton = NodePath("../Spin Trap")

[node name="Area" type="Area" parent="SpinnerNode/Death Lazer"]

[node name="CollisionShape" type="CollisionShape" parent="SpinnerNode/Death Lazer/Area"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="SpinnerNode/Death Lazer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.235047, 2.23517e-08 )
light_color = Color( 1, 0.0117647, 0.0117647, 1 )
omni_range = 1.23652
omni_attenuation = 0.353554

[node name="WeakSpot" type="Area" parent="SpinnerNode"]

[node name="CollisionShape" type="CollisionShape" parent="SpinnerNode/WeakSpot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.286032, 0 )
shape = SubResource( 7 )

[node name="Weak Spot Indicator" type="MeshInstance" parent="SpinnerNode"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0993583, 0 )
mesh = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 4 )

[node name="BreakParticles" parent="." instance=ExtResource( 6 )]

[connection signal="body_entered" from="SpinnerNode/Death Lazer/Area" to="." method="_onAttackAreaEntered"]
[connection signal="body_entered" from="SpinnerNode/WeakSpot" to="." method="_on_Weak_Spot_Hit"]
